@@ -202,6 +202,7 @@ class VISP_EXPORT vpDisplayWin32 : public vpDisplay
 		  bool blocking=true);
   bool getKeyboardEvent( bool blocking=true);
   bool getKeyboardEvent(char *string, bool blocking);
+  bool getPointerMotionEvent (vpImagePoint &ip);
 
   void waitForInit();
 
